Criado diretiva com registros de internação

--- a/src/templates/relatorios/kanbanDashboard.html
+++ b/src/templates/relatorios/kanbanDashboard.html
@@ -1,4 +1,4 @@
-<div ng-controller="dashboardController" ng-init="init()">
+<div ng-controller="RegistrosInternacaoController" ng-init="init()">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <span>Página Inicial</span>
