Ajustado nome de arquivos / Adicionado página com todos os registros de internação / Ajustado rotas

--- a/src/templates/directives/registrosInternacao.html
+++ b/src/templates/directives/registrosInternacao.html
@@ -72,7 +72,7 @@
                     </button>
                 </td>
                 <td class="text-center" ng-show="showAcoes">
-                    <button class="btn kan-btn-success kan-btn-sm" ng-click="closeThisDialog(registro)">
+                    <button class="btn kan-btn-success kan-btn-sm" ng-click="closeModal(registro)">
                         Escolher
                     </button>
                 </td>
