--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -61,14 +61,14 @@
                             </a>
                         </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Pedidos de Internação em Aberto">
-                            <a class="nav-link" ui-sref="relatorioPedidosEmAberto">
+                            <a class="nav-link" ui-sref="pedidosInternacao">
                                 <span class="nav-link-text">
                                     Lista de Pedidos de Internação
                                 </span>
                             </a>
                         </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Relatório Registro de Todas Internações">
-                            <a class="nav-link" ui-sref="relatorioTodasInternacoes">
+                            <a class="nav-link" ui-sref="registrosInternacao">
                                 <span class="nav-link-text">Lista de Registros de Internação</span>
                             </a>
                         </li> 
