--- a/src/templates/relatorios/listaRegistrosInternacaoAbertos.html
+++ b/src/templates/relatorios/listaRegistrosInternacaoAbertos.html
@@ -1,7 +1,7 @@
 <div ng-controller="RegistrosInternacaoController" ng-init="init()">
     <div class="kan-row-modal">
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-            <h5 class="kan-title">Lista de pedidoInternacaos de Internações Abertos
+            <h5 class="kan-title">Lista de Registros de Internação em Aberto
                 <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Escolha um registro para finalizar a internação do paciente."></i>
             </h5>
             <lista-registros-internacao registros="listaRegistros" oculta-legenda="false" show-acoes="true"></lista-registros-internacao>
