--- a/src/templates/relatorios/listaRegistrosInternacaoAbertos.html
+++ b/src/templates/relatorios/listaRegistrosInternacaoAbertos.html
@@ -4,7 +4,7 @@
             <h5 class="kan-title">Lista de Registros de Internação em Aberto
                 <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Escolha um registro para finalizar a internação do paciente."></i>
             </h5>
-            <lista-registros-internacao registros="listaRegistros" oculta-legenda="false" show-acoes="true"></lista-registros-internacao>
+            <lista-registros-internacao registros="listaRegistros" oculta-legenda="false" oculta-status="true" show-acoes="true"></lista-registros-internacao>
         </fieldset>
     </div>
 </div>
