--- a/src/templates/relatorios/listaPedidosInternacaoAbertos.html
+++ b/src/templates/relatorios/listaPedidosInternacaoAbertos.html
@@ -1,19 +1,9 @@
-<div ng-controller="PedidosInternacaoController">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <span>Relatórios</span>
-        </li>
-        <li class="breadcrumb-item active">
-            <span>Lista de Pedidos de Internação</span>
-        </li>
-    </ol>
-
-    <div class="kan-row">
+<div ng-controller="PedidosInternacaoController" ng-init="carregarPedidos()">
+    <div class="kan-row-modal">
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-                <h5 class="kan-title">Lista de Pedidos de Internação
-                    <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará todos os pedidos de internação.
-                    A primeira vez que a página é carregada será exibido todos os pedidos que estão com status pendente, ou seja, em aberto. 
+                <h5 class="kan-title">Lista com Pedidos de Internação em Aberto
+                    <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará todos os pedidos de internação em aberto.
                     Através dos campos abaixo você consegue filtrar os dados exibidos, para isso basta inserir as informações que deseja buscar e clicar no botão Pesquisar.">
                     </i>
                 </h5>
@@ -35,12 +25,7 @@
                         <strong>acima de 24 horas</strong>
                     </span>
                 </p>
-                <p class="d-inline-block mr-4">
-                    <i class="fa fa-circle fa-1-x text-secondary"></i>
-                    <span>Concluído ou Cancelado
-                    </span>
-                </p>
-                <filtros model="dadosFiltros" evento="evento"></filtros>
+                <filtros model="dadosFiltros" evento="evento" oculta-status="true" is-pedido="true"></filtros>
             </div>
             <h6 class="m-0">Dados do relatório</h6>
             <hr class="mt-1 mb-2">
@@ -61,13 +46,14 @@
                             <th class="text-center">Data Admissão</th>
                             <th class="text-center">Tempo Aguardando</th>
                             <th class="text-center">Status Pedido</th>
+                            <th class="text-center">Ação</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr ng-repeat="pedido in listaPedidos  | filter : search | orderBy: 'dataAdmissao'" ng-class="{ 'table-secondary' : pedido.statusPedido == 'CONCLUIDO' || pedido.statusPedido == 'CANCELADO',
-                                        'table-success' : pedido.classificacaoTempoEspera == 'verde', 
-                                        'table-warning' : pedido.classificacaoTempoEspera == 'amarela',
-                                        'table-danger'  : pedido.classificacaoTempoEspera == 'vermelha' }">
+                                                'table-success' : pedido.classificacao == 'verde', 
+                                                'table-warning' : pedido.classificacao == 'amarela',
+                                                'table-danger'  : pedido.classificacao == 'vermelha' }">
                             <td title="{{pedido.ala.nomeAla}}">{{pedido.ala.nomeAla}}</td>
                             <td title="{{pedido.medicoResponsavel}}">{{pedido.medicoResponsavel}}</td>
                             <td title="{{pedido.residenteResponsavel}}">{{pedido.residenteResponsavel}}</td>
@@ -87,9 +73,15 @@
                             <td class="text-center" ng-show="pedido.statusPedido == 'PENDENTE'" title="{{pedido.tempo.dias + ' dia(s) ' + pedido.tempo.horas + 'h ' + pedido.tempo.minutos + 'min'}}">
                                 {{pedido.tempo.dias + ' dia(s) ' + pedido.tempo.horas + 'h ' + pedido.tempo.minutos + 'min'}}</td>
                             <td class="text-center" title="pedido.statusPedido">{{pedido.statusPedido}}</td>
+                            <td class="text-center">
+                                <button class="btn kan-btn-success kan-btn-sm" ng-click="closeThisDialog(pedido)">
+                                    Escolher
+                                </button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </fieldset>
     </div>
+</div>
