--- a/src/templates/relatorios/kanbanListaRegistroInternacao.html
+++ b/src/templates/relatorios/kanbanListaRegistroInternacao.html
@@ -15,9 +15,8 @@
                         {{pacientes[0].classificacao}}
                     </b>
                 </h5>
-                <lista-registros-internacao registros="pacientes" oculta-legenda="true" ></lista-registros-internacao>
+                <lista-registros-internacao registros="pacientes" oculta-legenda="true" dados-filtros="dadosFiltros" evento="evento"></lista-registros-internacao>
             </div>
-
         </fieldset>
     </div>
 </div>
