--- a/src/templates/relatorios/listaRegistrosInternacao.html
+++ b/src/templates/relatorios/listaRegistrosInternacao.html
@@ -12,7 +12,7 @@
             <h5 class="kan-title">Lista de Registros de Internação
                 <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Escolha um registro para finalizar a internação do paciente."></i>
             </h5>
-            <lista-registros-internacao registros="listaRegistros" oculta-legenda="false" ></lista-registros-internacao>
+            <lista-registros-internacao registros="listaRegistros" oculta-legenda="false" dados-filtros="dadosFiltros" evento="evento"></lista-registros-internacao>
         </fieldset>
     </div>
 </div>
