Alterado nome do metodo que carrega os registros

--- a/src/templates/relatorios/listaRegistrosInternacao.html
+++ b/src/templates/relatorios/listaRegistrosInternacao.html
@@ -1,4 +1,4 @@
-<div ng-controller="RegistrosInternacaoController" ng-init="init()">
+<div ng-controller="RegistrosInternacaoController">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <span>Relatórios</span>
