--- a/src/templates/relatorios/listaRegistrosInternacaoAbertos.html
+++ b/src/templates/relatorios/listaRegistrosInternacaoAbertos.html
@@ -1,4 +1,4 @@
-<div ng-controller="RegistrosInternacaoController" ng-init="init()">
+<div ng-controller="RegistrosInternacaoController">
     <div class="kan-row-modal">
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
             <h5 class="kan-title">Lista de Registros de Internação em Aberto
