Criado tela tiposPendencias e adicionado ela no menu

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -71,7 +71,7 @@
                             <a class="nav-link" ui-sref="registrosInternacao">
                                 <span class="nav-link-text">Lista de Registros de Internação</span>
                             </a>
-                        </li> 
+                        </li>
                     </ul>
                 </div>
             </li>
@@ -103,6 +103,13 @@
                             <a class="nav-link" ui-sref="tiposIsolamentos">
                                 <span class="nav-link-text">
                                     Tipos de Isolamentos
+                                </span>
+                            </a>
+                        </li>
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tipos de Pendências">
+                            <a class="nav-link" ui-sref="tiposPendencias">
+                                <span class="nav-link-text">
+                                    Tipos de Pendências
                                 </span>
                             </a>
                         </li>
