Criado tela funcionarios

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -113,6 +113,13 @@
                                 </span>
                             </a>
                         </li>
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Funcionários">
+                            <a class="nav-link" ui-sref="funcionarios">
+                                <span class="nav-link-text">
+                                    Funcionários
+                                </span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
