Cadastro tipos de exames

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -99,6 +99,13 @@
                                 </span>
                             </a>
                         </li>
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Exames">
+                            <a class="nav-link" ui-sref="tiposExames">
+                                <span class="nav-link-text">
+                                    Tipos de Exames
+                                </span>
+                            </a>
+                        </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Isolamentos">
                             <a class="nav-link" ui-sref="tiposIsolamentos">
                                 <span class="nav-link-text">
