--- a/src/templates/cadastros-gerais/tiposExames.html
+++ b/src/templates/cadastros-gerais/tiposExames.html
@@ -12,8 +12,7 @@
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
                 <h5 class="kan-title">Tipos de Exames Cadastrados
-                    <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará tipos de exames cadastrados. 
-                    Eles são utilizado para indicar qual exames o paciente possui.">
+                    <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará tipos de exames cadastrados.">
                     </i>
                 </h5>
                 <div class="col-lg-12 kan-group">
