--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -106,6 +106,13 @@
                                 </span>
                             </a>
                         </li>
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Enfermarias">
+                                <a class="nav-link" ui-sref="enfermarias">
+                                    <span class="nav-link-text">
+                                        Enfermarias
+                                    </span>
+                                </a>
+                            </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Exames">
                             <a class="nav-link" ui-sref="tiposExames">
                                 <span class="nav-link-text">
