Realizado conversão das datas das pendências para formato de data

--- a/src/templates/internacao/pendenciaInternacao.html
+++ b/src/templates/internacao/pendenciaInternacao.html
@@ -36,7 +36,7 @@
                                 </select>
                             </td>
                             <td>
-                                <input type="date" ng-model="pendencia.dataInicio" filter="date" class="form-control form-control-sm">
+                                <input type="date" ng-model="pendencia.dataInicio" class="form-control form-control-sm">
                             </td>
                             <td>
                                 <input type="date" ng-model="pendencia.previsaoConclusao" class="form-control form-control-sm">
