--- a/src/resources/libs/css/kan.css
+++ b/src/resources/libs/css/kan.css
@@ -1,4 +1,4 @@
-.table-responsive{
+.table-responsive {
     display: block;
     width: 100%;
     overflow-x: auto;
@@ -13,29 +13,29 @@
     right: 0;
     z-index: 1000;
     margin: auto;
-
 }
 
-#mydiv {  
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    z-index:1000;
-    background-color:#E0E0E0; 
+#mydiv {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background-color: #E0E0E0;
     opacity: .6;
-    -moz-opacity:0.6
-    
- }
+    -moz-opacity: 0.6
+}
 
 .ajax-loader {
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-left: -32px; /* -1 * image width / 2 */
-    margin-top: -32px;  /* -1 * image height / 2 */
-    display: block;     
+    margin-left: -32px;
+    /* -1 * image width / 2 */
+    margin-top: -32px;
+    /* -1 * image height / 2 */
+    display: block;
 }
 
 #loading-bar .bar {
@@ -130,7 +130,6 @@ tbody {
     padding: unset;
 }
 
-
 .kan-row {
     background-color: #fff;
     padding: .75rem 1rem;
@@ -172,6 +171,18 @@ tbody {
     color: #28ad98;
     padding-left: 0.625rem;
 }
+
+button:disabled, button[disabled]>i {
+    cursor: not-allowed;
+}
+
+.btn-icon, btn-icon[focus] {
+    background: none;
+    border: none;
+    padding: 0px;
+    outline: none;
+}
+
 
 .btn, .kan-icon, .kan-icon-success {
     cursor: pointer;
@@ -267,13 +278,12 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
-input[type=datetime-local]::-webkit-clear-button,
-input[type=datetime-local]::-webkit-outer-spin-button,
-input[type=datetime-local]::-webkit-inner-spin-button {
-    display:none;
+input[type=datetime-local]::-webkit-clear-button, input[type=datetime-local]::-webkit-outer-spin-button, input[type=datetime-local]::-webkit-inner-spin-button {
+    display: none;
 }
+
 input[type=datetime-local] {
-  -moz-appearance:textfield;
+    -moz-appearance: textfield;
 }
 
 label {
@@ -304,26 +314,33 @@ label {
 fieldset.kan-group {
     padding: 0px;
 }
+
 hr {
     color: #2797e9;
     background-color: #2797e9;
     height: 1px;
 }
+
 /*Custom Color */
-.custom-control-indicator{
+
+.custom-control-indicator {
     background-color: #b3d7ff;
 }
 
 /* Sweet Popup */
+
 .swal2-popup.swal2-modal.swal2-show {
-  width: 24em;
-  font-size: 20px;
+    width: 24em;
+    font-size: 20px;
 }
+
 .swal2-container {
     z-index: 10000;
 }
+
 /*Ajuste icone*/
-i{
+
+i {
     cursor: pointer;
 }
 
